# repo_my_fun

./: .gitignore  main.py  pyproject.toml
src/my_mateusz_trzuskowski/: __init__.py
tests/: test_repo_z_mt.py
