[tool.poetry]
name = "repo_z_mt"
version = "0.1.4"
description = "first package in PyPi index"
authors = ["Mateusz Trzuskowski <mtrzuskowski@sii.pl>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
